# string-alloc-profiler

./: !  Cargo.toml  events.ldjson
src/: alloc.rs  main.rs  report.rs  sample.rs
