[package]
name = "small"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
bytesize = "1.2.0"
libc = "0.2.140"

serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
textplots = "0.8.0"
smol_str = { version = "0.1.15", features = ["serde"] }
parse-display = "0.8.0"
smartstring = "1.0.1"

